--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.0",
     "@uiw/react-md-editor": "v3.6.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
