--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.1",
