--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.32.0",
     "@uiw/react-md-editor": "v3.6.0",
     "autoprefixer": "10.4.14",
@@ -22,9 +25,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "react-redux": "^8.1.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "sass": "^1.64.1",
     "tailwindcss": "3.3.3"
   }
