--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "moment": "^2.29.4",
     "next": "13.4.12",
     "next-remove-imports": "^1.0.11",
     "postcss": "8.4.27",
