--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.64.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6"
   }
 }
